--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "scheduler",
   "version": "0.1.0",
+  "proxy": "http://localhost:8001",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.6",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hooks-testing-library": "^0.6.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
@@ -15,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cypress": "cypress open -P ."
   },
   "browserslist": {
     "production": [
@@ -38,7 +42,10 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-loader": "8.1.0",
+    "prop-types": "^15.8.1",
+    "react-test-renderer": "^16.9.0",
     "sass": "^1.53.0"
   },
   "jest": {
